--- a/archives/toutiao-search/2024-02-16.md
+++ b/archives/toutiao-search/2024-02-16.md
@@ -1,58 +1,78 @@
 # 2024-02-16
 
-共 335 条
+共 354 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Feb 16 2024 21:00:54 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Feb 16 2024 22:00:48 GMT+0800 (China Standard Time) -->
 1. [女子做饭高压锅爆炸 家人反应不一](https://so.toutiao.com/search?keyword=女子做饭高压锅爆炸+家人反应不一)
-1. [湖北多个高速入口临时关闭](https://so.toutiao.com/search?keyword=湖北多个高速入口临时关闭)
-1. [向劳动者致敬 为奋斗者点赞](https://so.toutiao.com/search?keyword=向劳动者致敬+为奋斗者点赞)
-1. [河南惊现贾玲分玲](https://so.toutiao.com/search?keyword=河南惊现贾玲分玲)
-1. [兵马俑人气有多旺](https://so.toutiao.com/search?keyword=兵马俑人气有多旺)
+1. [民航局：全力保障三亚地区游客出行](https://so.toutiao.com/search?keyword=民航局：全力保障三亚地区游客出行)
+1. [挺进70亿！电影春节档持续火爆](https://so.toutiao.com/search?keyword=挺进70亿！电影春节档持续火爆)
+1. [全国降温预报图变深红色了](https://so.toutiao.com/search?keyword=全国降温预报图变深红色了)
+1. [印度选手谈战胜孙颖莎](https://so.toutiao.com/search?keyword=印度选手谈战胜孙颖莎)
 1. [OpenAI视频生成模型会让哪些人失业](https://so.toutiao.com/search?keyword=OpenAI视频生成模型会让哪些人失业)
-1. [俄反对派人士纳瓦利内在狱中死亡](https://so.toutiao.com/search?keyword=俄反对派人士纳瓦利内在狱中死亡)
-1. [普京称更希望拜登当选 特朗普回应](https://so.toutiao.com/search?keyword=普京称更希望拜登当选+特朗普回应)
-1. [薛之谦回应飞驰2盗摄质疑](https://so.toutiao.com/search?keyword=薛之谦回应飞驰2盗摄质疑)
-1. [男子去女友家拜年喝“趴”被抬走](https://so.toutiao.com/search?keyword=男子去女友家拜年喝“趴”被抬走)
+1. [海南一游客退房要擦马桶？官方通报](https://so.toutiao.com/search?keyword=海南一游客退房要擦马桶？官方通报)
+1. [胡锡进谈纳瓦利内狱中死亡](https://so.toutiao.com/search?keyword=胡锡进谈纳瓦利内狱中死亡)
+1. [特朗普称自己两秒就能让拜登趴下](https://so.toutiao.com/search?keyword=特朗普称自己两秒就能让拜登趴下)
+1. [贾玲：减肥后暂时不敢吃襄阳牛肉面](https://so.toutiao.com/search?keyword=贾玲：减肥后暂时不敢吃襄阳牛肉面)
 1. [三亚返程机票一张近两万 律师回应](https://so.toutiao.com/search?keyword=三亚返程机票一张近两万+律师回应)
 1. [海南新能源车主“人走车留”上千辆](https://so.toutiao.com/search?keyword=海南新能源车主“人走车留”上千辆)
 1. [胖东来员工尝面未清洗筷子被解雇](https://so.toutiao.com/search?keyword=胖东来员工尝面未清洗筷子被解雇)
 1. [刘松仁宣布不再拍戏](https://so.toutiao.com/search?keyword=刘松仁宣布不再拍戏)
+1. [薛之谦转发央视报道再回应盗摄](https://so.toutiao.com/search?keyword=薛之谦转发央视报道再回应盗摄)
+1. [姚明女儿13岁身高1米9](https://so.toutiao.com/search?keyword=姚明女儿13岁身高1米9)
+1. [湖北多个高速入口临时关闭](https://so.toutiao.com/search?keyword=湖北多个高速入口临时关闭)
 1. [王珞丹过年被90多岁姥爷催婚](https://so.toutiao.com/search?keyword=王珞丹过年被90多岁姥爷催婚)
-1. [江西赣州一电影院发生吵架打人事件](https://so.toutiao.com/search?keyword=江西赣州一电影院发生吵架打人事件)
-1. [大年初四56岁民警因公牺牲](https://so.toutiao.com/search?keyword=大年初四56岁民警因公牺牲)
-1. [海南一游客退房要擦马桶？官方通报](https://so.toutiao.com/search?keyword=海南一游客退房要擦马桶？官方通报)
 1. [17年前被抢男婴回家过年](https://so.toutiao.com/search?keyword=17年前被抢男婴回家过年)
+1. [贾玲透露下部作品马上开机](https://so.toutiao.com/search?keyword=贾玲透露下部作品马上开机)
+1. [英国父子混合精液注入女方体内生子](https://so.toutiao.com/search?keyword=英国父子混合精液注入女方体内生子)
+1. [河南将迎龙年首场大范围雨雪](https://so.toutiao.com/search?keyword=河南将迎龙年首场大范围雨雪)
+1. [吴京与家人在新加坡过春节](https://so.toutiao.com/search?keyword=吴京与家人在新加坡过春节)
+1. [河南惊现贾玲分玲](https://so.toutiao.com/search?keyword=河南惊现贾玲分玲)
+1. [年前路上吃光年货 返程路上吃光特产](https://so.toutiao.com/search?keyword=年前路上吃光年货+返程路上吃光特产)
+1. [兵马俑人气有多旺](https://so.toutiao.com/search?keyword=兵马俑人气有多旺)
+1. [俄反对派人士纳瓦利内在狱中死亡](https://so.toutiao.com/search?keyword=俄反对派人士纳瓦利内在狱中死亡)
+1. [看电影拍照发朋友圈算盗摄吗](https://so.toutiao.com/search?keyword=看电影拍照发朋友圈算盗摄吗)
+1. [大风寒潮沙尘暴三预警齐发](https://so.toutiao.com/search?keyword=大风寒潮沙尘暴三预警齐发)
+1. [港股三连升 恒指重上16000点](https://so.toutiao.com/search?keyword=港股三连升+恒指重上16000点)
 1. [孙悦因儿子复出](https://so.toutiao.com/search?keyword=孙悦因儿子复出)
+1. [男子穿很久没穿的新鞋爬山秒变凉鞋](https://so.toutiao.com/search?keyword=男子穿很久没穿的新鞋爬山秒变凉鞋)
+1. [胖东来发布《致顾客信》](https://so.toutiao.com/search?keyword=胖东来发布《致顾客信》)
+1. [男子村里开车遇交警查酒驾](https://so.toutiao.com/search?keyword=男子村里开车遇交警查酒驾)
+1. [谢广坤得知刘能病后急麻了](https://so.toutiao.com/search?keyword=谢广坤得知刘能病后急麻了)
+1. [少年之名苏尔求助：家中欠债40万](https://so.toutiao.com/search?keyword=少年之名苏尔求助：家中欠债40万)
+1. [特朗普让拜登试试白天出庭晚上竞选](https://so.toutiao.com/search?keyword=特朗普让拜登试试白天出庭晚上竞选)
+1. [世乒赛中国男队3-0比利时](https://so.toutiao.com/search?keyword=世乒赛中国男队3-0比利时)
+1. [动物园回应男子吐槽只看到几只水牛](https://so.toutiao.com/search?keyword=动物园回应男子吐槽只看到几只水牛)
+1. [本轮冲突已致加沙超2.86万人死亡](https://so.toutiao.com/search?keyword=本轮冲突已致加沙超2.86万人死亡)
+1. [英媒：中国春节渐成世界性节日](https://so.toutiao.com/search?keyword=英媒：中国春节渐成世界性节日)
+1. [大年初四56岁民警因公牺牲](https://so.toutiao.com/search?keyword=大年初四56岁民警因公牺牲)
+1. [媒体：景区坦陈问题积极解决应点赞](https://so.toutiao.com/search?keyword=媒体：景区坦陈问题积极解决应点赞)
+1. [库里：我和哈登是一届 我不想输他](https://so.toutiao.com/search?keyword=库里：我和哈登是一届+我不想输他)
+1. [以军在纳赛尔医院抓捕哈马斯武装](https://so.toutiao.com/search?keyword=以军在纳赛尔医院抓捕哈马斯武装)
+1. [业内：积极看待龙年股市](https://so.toutiao.com/search?keyword=业内：积极看待龙年股市)
+1. [一家人旅游未买5万元手镯被赶下车](https://so.toutiao.com/search?keyword=一家人旅游未买5万元手镯被赶下车)
+1. [农业农村部部署应对节后寒潮天气](https://so.toutiao.com/search?keyword=农业农村部部署应对节后寒潮天气)
+1. [景区将男厕改成女厕 男子带队闯入](https://so.toutiao.com/search?keyword=景区将男厕改成女厕+男子带队闯入)
+1. [字母哥：每个人都必须变得更好](https://so.toutiao.com/search?keyword=字母哥：每个人都必须变得更好)
+1. [向劳动者致敬 为奋斗者点赞](https://so.toutiao.com/search?keyword=向劳动者致敬+为奋斗者点赞)
+1. [普京称更希望拜登当选 特朗普回应](https://so.toutiao.com/search?keyword=普京称更希望拜登当选+特朗普回应)
+1. [薛之谦回应飞驰2盗摄质疑](https://so.toutiao.com/search?keyword=薛之谦回应飞驰2盗摄质疑)
+1. [男子去女友家拜年喝“趴”被抬走](https://so.toutiao.com/search?keyword=男子去女友家拜年喝“趴”被抬走)
+1. [江西赣州一电影院发生吵架打人事件](https://so.toutiao.com/search?keyword=江西赣州一电影院发生吵架打人事件)
 1. [外国女性用一对父子精液生子引争议](https://so.toutiao.com/search?keyword=外国女性用一对父子精液生子引争议)
 1. [泽连斯基：正竭力解救被困乌军士兵](https://so.toutiao.com/search?keyword=泽连斯基：正竭力解救被困乌军士兵)
 1. [男子行李中装30盒摔炮安检被拦下](https://so.toutiao.com/search?keyword=男子行李中装30盒摔炮安检被拦下)
-1. [年前路上吃光年货 返程路上吃光特产](https://so.toutiao.com/search?keyword=年前路上吃光年货+返程路上吃光特产)
 1. [乌称阿夫杰耶夫卡城内正在激战](https://so.toutiao.com/search?keyword=乌称阿夫杰耶夫卡城内正在激战)
-1. [男子穿很久没穿的新鞋爬山秒变凉鞋](https://so.toutiao.com/search?keyword=男子穿很久没穿的新鞋爬山秒变凉鞋)
-1. [吴京与家人在新加坡过春节](https://so.toutiao.com/search?keyword=吴京与家人在新加坡过春节)
-1. [贾玲：减肥后暂时不敢吃襄阳牛肉面](https://so.toutiao.com/search?keyword=贾玲：减肥后暂时不敢吃襄阳牛肉面)
-1. [男子村里开车遇交警查酒驾](https://so.toutiao.com/search?keyword=男子村里开车遇交警查酒驾)
-1. [特朗普称自己两秒就能让拜登趴下](https://so.toutiao.com/search?keyword=特朗普称自己两秒就能让拜登趴下)
-1. [看电影拍照发朋友圈算盗摄吗](https://so.toutiao.com/search?keyword=看电影拍照发朋友圈算盗摄吗)
-1. [景区将男厕改成女厕 男子带队闯入](https://so.toutiao.com/search?keyword=景区将男厕改成女厕+男子带队闯入)
 1. [张颂文情商有多高](https://so.toutiao.com/search?keyword=张颂文情商有多高)
 1. [新疆大部有强降雪和强降温](https://so.toutiao.com/search?keyword=新疆大部有强降雪和强降温)
-1. [谢广坤得知刘能病后急麻了](https://so.toutiao.com/search?keyword=谢广坤得知刘能病后急麻了)
 1. [曝张柏芝疑似怀第四胎](https://so.toutiao.com/search?keyword=曝张柏芝疑似怀第四胎)
-1. [全国降温预报图变深红色了](https://so.toutiao.com/search?keyword=全国降温预报图变深红色了)
 1. [森林狼128-91击败开拓者](https://so.toutiao.com/search?keyword=森林狼128-91击败开拓者)
-1. [少年之名苏尔求助：家中欠债40万](https://so.toutiao.com/search?keyword=少年之名苏尔求助：家中欠债40万)
-1. [印度选手谈战胜孙颖莎](https://so.toutiao.com/search?keyword=印度选手谈战胜孙颖莎)
 1. [熊出没第十部为何能“逆转时空”](https://so.toutiao.com/search?keyword=熊出没第十部为何能“逆转时空”)
-1. [英媒：中国春节渐成世界性节日](https://so.toutiao.com/search?keyword=英媒：中国春节渐成世界性节日)
 1. [维金斯：这个赛季起起伏伏](https://so.toutiao.com/search?keyword=维金斯：这个赛季起起伏伏)
 1. [俄罗斯的扫雪车居然这么可爱](https://so.toutiao.com/search?keyword=俄罗斯的扫雪车居然这么可爱)
 1. [以军空袭致黎巴嫩真主党指挥官身亡](https://so.toutiao.com/search?keyword=以军空袭致黎巴嫩真主党指挥官身亡)
-1. [姚明女儿13岁身高1米9](https://so.toutiao.com/search?keyword=姚明女儿13岁身高1米9)
 1. [美国扣押数千辆保时捷宾利奥迪](https://so.toutiao.com/search?keyword=美国扣押数千辆保时捷宾利奥迪)
 1. [卢拉：以色列应停止杀戮](https://so.toutiao.com/search?keyword=卢拉：以色列应停止杀戮)
-1. [河南将迎龙年首场大范围雨雪](https://so.toutiao.com/search?keyword=河南将迎龙年首场大范围雨雪)
 1. [第二十条演员谈善恶和利弊哪个重要](https://so.toutiao.com/search?keyword=第二十条演员谈善恶和利弊哪个重要)
 1. [徐根宝：中国足球真的是全面落后](https://so.toutiao.com/search?keyword=徐根宝：中国足球真的是全面落后)
 1. [《第二十条》连续实现票房逆跌](https://so.toutiao.com/search?keyword=《第二十条》连续实现票房逆跌)
@@ -189,7 +209,6 @@
 1. [高速返程请避开大流量路段](https://so.toutiao.com/search?keyword=高速返程请避开大流量路段)
 1. [女子过年被“另类”催婚](https://so.toutiao.com/search?keyword=女子过年被“另类”催婚)
 1. [内马尔回归利雅得新月恢复训练](https://so.toutiao.com/search?keyword=内马尔回归利雅得新月恢复训练)
-1. [民航局：全力保障三亚地区游客出行](https://so.toutiao.com/search?keyword=民航局：全力保障三亚地区游客出行)
 1. [克莱总得分突破15000分 勇士胜爵士](https://so.toutiao.com/search?keyword=克莱总得分突破15000分+勇士胜爵士)
 1. [新投资方恳请足协调查济南兴洲](https://so.toutiao.com/search?keyword=新投资方恳请足协调查济南兴洲)
 1. [潮汕女子英歌舞刚柔并济又飒又美](https://so.toutiao.com/search?keyword=潮汕女子英歌舞刚柔并济又飒又美)
